<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameTxt"
            android:textAlignment="center"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/nameTbx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nameTxt"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/usernameLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userTxt"
            android:textAlignment="center"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/usernameTbx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userTxt"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordTxt"
            android:textAlignment="center"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/passTbx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordTxt"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/registerUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerTxt" />

        <Button
            android:id="@+id/returnBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/returnTxt" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>